using NB.Model.Entities;
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace NB.Service.CustomerService.Dto
{
    public class CustomerDto : User
    {
    }
}
