using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace NB.Service.CustomerService.ViewModels
{
    public class CustomerCreateVm
    {
    }
}
